This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Exception strings for bytearray say "bytes"
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 3.1, Python 3.2, Python 2.7, Python 2.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: hagen, mark.dickinson
Priority: normal Keywords: patch

Created on 2009-09-05 18:59 by hagen, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
bytearray_strings.patch hagen, 2009-09-05 18:59
Messages (2)
msg92293 - (view) Author: Hagen Fürstenau (hagen) Date: 2009-09-05 18:59
Various exceptions thrown by bytearray objects talk of "bytes" instead
of "bytearray". Correction attached.
msg92300 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2009-09-06 10:36
Thanks.  Fixed in revisions r74677 through r74680.
History
Date User Action Args
2022-04-11 14:56:52adminsetgithub: 51096
2009-09-06 10:36:47mark.dickinsonsetstatus: open -> closed

nosy: + mark.dickinson
messages: + msg92300

resolution: fixed
stage: resolved
2009-09-05 18:59:53hagencreate